# BeaconCast

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker-image.yml  rust.yml
crates/beacon-cast-agent/: .gitignore  Cargo.toml  agent.example.toml
crates/beacon-cast-agent/src/: client.rs  config.rs  dto.rs  error.rs  main.rs  runtime.rs  sources.rs
crates/beacon-cast-contract/: Cargo.toml
crates/beacon-cast-contract/src/: lib.rs
frontend-panel/: biome.json  package.json  vite.config.ts
frontend-panel/src/config/: app.ts
migration/: README.md
migration/src/: lib.rs  m20260701_000002_beacon_cast_product_schema.rs  m20260702_000003_activity_usage_spans.rs  m20260702_000004_activity_classification_config.rs
src/: errors.rs  lib.rs  main.rs  types.rs
src/api/: common.rs  error_code.rs  mod.rs  openapi.rs  request_auth.rs  response.rs
src/api/dto/: admin.rs  (+2 more)
src/config/: definitions.rs  loader.rs  mod.rs  schema.rs  system_config.rs
src/db/: mod.rs
src/entities/: activity_action.rs  activity_application.rs  activity_application_alias.rs  activity_event.rs  activity_usage_span.rs  admin_session.rs  admin_user.rs  beacon_device.rs  beacon_device_token.rs  manual_override.rs  mod.rs
src/runtime/: assembly.rs
src/services/: activity_projection.rs  admin_auth_service.rs  audit_service.rs  beacon_service.rs  mail_outbox_service.rs  mod.rs
tests/: admin_routes.rs  beacon_routes.rs  config_loader.rs  generate_openapi.rs  health_routes.rs  migration_smoke.rs
tests/common/: mod.rs
(+55 files in other folders)
