[package]
name = "beacon-cast-contract"
version = "0.1.0"
description = "Shared BeaconCast API contract types"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = ""

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5.5.0", features = ["chrono"], optional = true }
